--- a/causal-inference-for-the-brave-and-true/13-Difference-in-Differences.ipynb
+++ b/causal-inference-for-the-brave-and-true/13-Difference-in-Differences.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "I remember when I worked with marketing and a great way to do it was with internet advertisement. Not because it is very efficient (although it is), but because it is very easy to know if it's effective or not. With online marketing, you have a way of knowing which customers saw the ad and you can track them with cookies to see if they ended up on your landing page or clicked some download button. You can also use machine learning to find prospects that are very similar to your customers and present the ad only to them. In this sense, online marketing is very precise: you target only those you want to and you can see if they respond as you would like them to. \n",
     "\n",
-    "But not everyone is susceptible to online marketing. Sometimes you have to resort to less precise techniques, like a TV campaign or placing a billboard down the street. Usually, diversity of marketing channels is something marketing departments look for. But if online marketing is a professional fishing rod to catch that specific type of tuna, billboard and TV are giant nets you throw at a fish shoal and hope to catch at least some big ones. Another problem with billboard and TV ads is that it is much harder to know how effective they are. Sure, you could measure the purchase volume, or whatever you want to drive, before and after placing a billboard somewhere. If there is an increase, there is some evidence that the marketing is effective. But how would you know if this increase is not just some natural trend in the awareness of your product? In other words, how would you know the counterfactual $Y_0$ of what would have happened if you didn't set up the billboards in the first place? \n",
+    "But not everyone is susceptible to online marketing. <mark>Sometimes you have to resort to less precise techniques, like a TV campaign or placing a billboard down the street</mark>. Usually, diversity of marketing channels is something marketing departments look for. But if online marketing is a professional fishing rod to catch that specific type of tuna, billboard and TV are giant nets you throw at a fish shoal and hope to catch at least some big ones. Another problem with billboard and TV ads is that it is much harder to know how effective they are. Sure, you could measure the purchase volume, or whatever you want to drive, before and after placing a billboard somewhere. If there is an increase, there is some evidence that the marketing is effective. But how would you know if this increase is not just some natural trend in the awareness of your product? In other words, how would you know the counterfactual $Y_0$ of what would have happened if you didn't set up the billboards in the first place? \n",
     "\n",
     "![img](./data/img/diff-in-diff/secrets.png)\n",
     "\n",
@@ -146,7 +146,7 @@
     "\\hat{ATET} = E[Y_1(1) - Y_0(1)|D=1]\n",
     "$\n",
     "\n",
-    "In words, the causal effect is the outcome in the period post intervention in case of a treatment minus the outcome in also in the period after the intervention, but in the case of no treatment. Of course, we can't measure this because $Y_0(1)$ is counterfactual. \n",
+    "In words, the causal effect is the <mark>outcome in the period post intervention in case of a treatment minus the outcome in also in the period after the intervention, but in the case of no treatment</mark>. Of course, we can't measure this because $Y_0(1)$ is <mark>counterfactual</mark>. \n",
     "\n",
     "One way around this is a before and after comparison.\n",
     "\n",
@@ -154,7 +154,7 @@
     "\\hat{ATET} = E[Y(1)|D=1] - E[Y(0)|D=1]\n",
     "$\n",
     "\n",
-    "In our example, we would compare the average deposits from POA before and after the billboard was placed."
+    "In our example, we would compare the <mark>average deposits from POA before and after the billboard was placed</mark>."
    ]
   },
   {
@@ -174,9 +174,9 @@
     }
    ],
    "source": [
-    "poa_before = data.query(\"poa==1 & jul==0\")[\"deposits\"].mean()\n",
+    "poa_before = data.query(\"poa==1 & jul==0\")[\"deposits\"].mean() # may\n",
     "\n",
-    "poa_after = data.query(\"poa==1 & jul==1\")[\"deposits\"].mean()\n",
+    "poa_after = data.query(\"poa==1 & jul==1\")[\"deposits\"].mean() # july\n",
     "\n",
     "poa_after - poa_before"
    ]
@@ -185,19 +185,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This estimator is telling us that we should expect deposits to increase R$ 41,04 after the intervention. But can we trust this?\n",
+    "This estimator is telling us that we should expect <mark>deposits to increase R$ 41,04 after the intervention</mark>. But can we trust this?\n",
     "\n",
-    "Notice that $E[Y(0)|D=1]=E[Y_0(0)|D=1]$, that is, the observed outcome for the treated unit **before the intervention** is equal to the counterfactual outcome for the treated unit also before the intervention. Since we are using this to estimate the counterfactual **after the intervention**  $E[Y_0(1)|D=1]$, this estimation above assumes that $E[Y_0(1)|D=1] = E[Y_0(0)|D=1]$. \n",
+    "Notice that $E[Y(0)|D=1]=E[Y_0(0)|D=1]$, that is, the observed outcome for the treated unit **before the intervention** is equal to the counterfactual outcome for the treated unit also before the intervention</mark>. Since we are using this to estimate the counterfactual **after the intervention**  $E[Y_0(1)|D=1]$, this estimation above assumes that $E[Y_0(1)|D=1] = E[Y_0(0)|D=1]$.  <mark>_(Contrafactual em JULHO é o outcome observado para os tratados em MAIO. Mesmas amostras em momentos diferentes)_</mark>\n",
     "\n",
-    "It is saying that in the case of no intervention, the outcome in the latter period would be the same as the outcome from the starting period. This would obviously be false if your outcome variable follows any kind of trend. For example, if deposits are going up in POA, $E[Y_0(1)|D=1] > E[Y_0(0)|D=1]$, i.e. the outcome of the latter period would be greater than that of the starting period even in the absence of the intervention. With a similar argument, if the trend in Y is going down, $E[Y_0(1)|D=1] < E[Y_0(0)|D=1]$. This is to show that this before and after thing is not a great estimator. \n",
+    "<mark>It is saying that in the case of no intervention, the outcome in the latter period would be the same as the outcome from the starting period.</mark> This would obviously be false if your outcome variable follows any kind of trend. For example, if deposits are going up in POA, $E[Y_0(1)|D=1] > E[Y_0(0)|D=1]$, i.e. the outcome of the latter period would be greater than that of the starting period even in the absence of the intervention. With a similar argument, if the trend in Y is going down, $E[Y_0(1)|D=1] < E[Y_0(0)|D=1]$. This is to show that this before and after thing is not a great estimator. \n",
     "\n",
-    "Another idea is to compare the treated group with an untreated group that didn't get the intervention:\n",
+    "Another idea is to <mark>compare the treated group with an untreated group that didn't get the intervention</mark>:\n",
     "\n",
     "$\n",
     "\\hat{ATET} = E[Y(1)|D=1] - E[Y(1)|D=0]\n",
     "$\n",
     "\n",
-    "In our example, it would be to compare the deposits from POA to that of Florianopolis in the post intervention period."
+    "In our example, it would be to <mark>compare the deposits from POA to that of Florianopolis in the post intervention period.</mark>"
    ]
   },
   {
@@ -225,19 +225,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This estimator is telling us that the campaign is detrimental and that customers will decrease deposits by R$ 119.10. \n",
+    "This estimator is telling us that the campaign is detrimental and that customers will <mark>decrease deposits by R$ 119.10. </mark>\n",
     "\n",
-    "Notice that $E[Y(1)|D=0]=E[Y_0(1)|D=0]$. And since we are using $E[Y(1)|D=0]$ to estimate the counterfactual for the treated after the intervention, we are assuming we can replace the missing counterfactual like this: $E[Y_0(1)|D=0] = E[Y_0(1)|D=1]$. But notice that this would only be true if both groups have a very similar baseline level. For instance, if Florianopolis has way more deposits than Porto Alegre, this would not be true because $E[Y_0(1)|D=0] > E[Y_0(1)|D=1]$. On the other hand, if the level of deposits are lower in Florianopolis, we would have $E[Y_0(1)|D=0] < E[Y_0(1)|D=1]$. \n",
+    "Notice that $E[Y(1)|D=0]=E[Y_0(1)|D=0]$. And since we are using $E[Y(1)|D=0]$ to estimate the counterfactual for the treated after the intervention, we are assuming we can replace the missing counterfactual like this: $E[Y_0(1)|D=0] = E[Y_0(1)|D=1]$. <mark>But notice that this would only be true if both groups have a very similar baseline level.</mark> For instance, if Florianopolis has way more deposits than Porto Alegre, this would not be true because $E[Y_0(1)|D=0] > E[Y_0(1)|D=1]$. On the other hand, if the level of deposits are lower in Florianopolis, we would have $E[Y_0(1)|D=0] < E[Y_0(1)|D=1]$. \n",
     "\n",
-    "Again, this is not a great idea. To solve this, we can use both space and time comparison. This is the idea of the difference in difference approach. It works by replacing the missing counterfactual the following way:\n",
+    "Again, this is not a great idea. To solve this, <mark>we can use both space and time comparison</mark>. This is the idea of the difference in difference approach. It works by replacing the missing counterfactual the following way:\n",
     "\n",
     "$\n",
     "E[Y_0(1)|D=1] = E[Y_1(0)|D=1] + (E[Y_0(1)|D=0] - E[Y_0(0)|D=0])\n",
     "$\n",
     "\n",
-    "What this does is take the treated unit **before the intervention** and adds a trend component to it, which is estimated using the control $E[Y_0(1)|D=0] - E[Y_0(0)|D=0]$. In words, it is saying that the treated **after the intervention**, had it not been treated, would look like the **treated before the treatment** plus a growth factor that is the same as the growth of the control. \n",
+    "What this does is <mark>take the treated unit **before the intervention** and adds a trend component to it</mark>, which is estimated using the control $E[Y_0(1)|D=0] - E[Y_0(0)|D=0]$. In words, it is saying that the treated **after the intervention**, had it not been treated, would look like the **treated before the treatment** plus a growth factor that is the same as the growth of the control. \n",
     "\n",
-    "It is important to notice that this assumes that the trends in the treatment and control are the same:\n",
+    "* <mark>_Contrafactual: Depósitos em POA em Maio + Crescimento de Depósitos em Florianópolis_</mark>\n",
+    "* <mark>_Crescimento de Depósitos em Florianópolis = Depósitos em Florianópolis em Julho - Depósitos em Florianópolis em Maio_</mark>\n",
+    "\n",
+    "It is important to notice that this assumes that the <mark>trends in the treatment and control are the same</mark>:\n",
     "\n",
     "$\n",
     "E[Y_0(1) − Y_0(0)|D=1] = E[Y_0(1) − Y_0(0)|D=0]\n",
@@ -255,7 +258,9 @@
     "\\hat{ATET} = (E[Y(1)|D=1] - E[Y(1)|D=0]) - (E[Y(0)|D=1] - E[Y(0)|D=0])\n",
     "$\n",
     "\n",
-    "It gets that name because it gets the difference between the difference between treatment and control after and before the treatment. \n",
+    "* <mark>_ATET = (POA Julho - Florianópolis Julho) - (POA Maio - Florianópolis Maio)_</mark>\n",
+    "\n",
+    "It gets that name because it gets the <mark>difference between the difference between treatment and control after and before the treatment.</mark>\n",
     "\n",
     "Here is what that looks in code."
    ]
@@ -287,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diff-in-Diff is telling us that we should expect deposits to increase by R$ 6.52 per customer. Notice that the assumption that diff-in-diff makes is much more plausible than the other 2 estimators. It just assumes that the growth pattern between the 2 cities are the same. But it doesn't require them to have the same base level nor does it require the trend to be zero. \n",
+    "Diff-in-Diff is telling us that we should expect deposits to <mark>increase by R$ 6.52 per customer.</mark> Notice that the assumption that diff-in-diff makes is much more plausible than the other 2 estimators. It just assumes that the growth pattern between the 2 cities are the same. But it doesn't require them to have the same base level nor does it require the trend to be zero. \n",
     "\n",
     "To visualize what diff-in-diff is doing, we can project the growth trend from the untreated into the treated to see the counterfactual, that is, the number of deposits we should expect if there were no intervention."
    ]
@@ -330,7 +335,7 @@
     "![img](./data/img/diff-in-diff/cant-read.png)\n",
     "\n",
     "\n",
-    "Now, what you might be asking yourself is \"how much can I trust this estimator? It is my right to have standard errors reported to me!\". Which makes sense, since estimators without them look silly. To do so, we will use a neat trick that uses regression. Specifically, we will estimate the following linear model\n",
+    "Now, what you might be asking yourself is \"how much can I trust this estimator? It is my right to have standard errors reported to me!\". Which makes sense, since estimators without them look silly. To do so, we will use a neat trick that uses regression. Specifically, we will estimate the <mark>following linear model</mark>\n",
     "\n",
     "$\n",
     "Y_i = \\beta_0 + \\beta_1 POA_i + \\beta_2 Jul_i + \\beta_3 POA_i*Jul_i + e_i\n",
@@ -386,7 +391,7 @@
    "source": [
     "## Non Parallel Trends\n",
     "\n",
-    "One obvious problem with Diff-in-Diff is failure to satisfy the parallel trend assumption. If the growth trend from the treated is different from the trend of the control, diff-in-diff will be biased. This is a common problem with non-random data, where the decision to treat a region is based on its potential to respond well to the treatment, or when the treatment is targeted at regions that are not performing very well. Take our marketing example. We decided to test billboards in Porto Alegre not in order to check the effect of billboards in general. The reason is simply because sales perform poorly there. Perhaps online marketing is not working there. In this case, it could be that the growth we would see in Porto Alegre without a billboard would be lower than the growth we observe in other cities. This would cause us to underestimate the effect of the billboard there.\n",
+    "<mark>One obvious problem with Diff-in-Diff is failure to satisfy the parallel trend assumption.</mark> If the growth trend from the treated is different from the trend of the control, diff-in-diff will be biased. This is a common problem with non-random data, where the decision to treat a region is based on its potential to respond well to the treatment, or when the treatment is targeted at regions that are not performing very well. Take our marketing example. We decided to test billboards in Porto Alegre not in order to check the effect of billboards in general. The reason is simply because sales perform poorly there. Perhaps online marketing is not working there. In this case, it could be that the growth we would see in Porto Alegre without a billboard would be lower than the growth we observe in other cities. This would cause us to underestimate the effect of the billboard there.\n",
     "\n",
     "One way to check if this is happening is to plot the trend using past periods. For example, let's suppose POA had a small decreasing trend but Florianopolis was on a steep ascent. In this case, showing periods from before would reveal those trends and we would know Diff-in-Diff is not a reliable estimator."
    ]
@@ -433,7 +438,7 @@
     "\n",
     "![img](./data/img/diff-in-diff/non-parallel.png)\n",
     "\n",
-    "One final issue that it's worth mentioning is that you won't be able to place confidence intervals around your Diff-in-Diff estimator if you only have aggregated data. Say for instance you don't have data on what each of our customers from Florianópolis or Porto Alegre did. Instead, you only have the average deposits before and after the intervention for both cities. In this case, you will still be able to estimate the causal effect by Diff-in-Diff, but you won't know the variance of it. That's because all the variability in your data got squashed out in aggregation.\n",
+    "One final issue that it's worth mentioning is that you <mark>won't be able to place confidence intervals around your Diff-in-Diff estimator if you only have aggregated data.</mark> Say for instance you don't have data on what each of our customers from Florianópolis or Porto Alegre did. Instead, you only have the average deposits before and after the intervention for both cities. In this case, you will still be able to estimate the causal effect by Diff-in-Diff, but you won't know the variance of it. That's because all the variability in your data got squashed out in aggregation.\n",
     "\n",
     "## Key Ideas\n",
     "\n",
@@ -493,9 +498,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
