--- a/causal-inference-for-the-brave-and-true/16-Regression-Discontinuity-Design.ipynb
+++ b/causal-inference-for-the-brave-and-true/16-Regression-Discontinuity-Design.ipynb
@@ -24,7 +24,7 @@
     "D_i = \\mathcal{1}\\{R_i>c\\}\n",
     "$\n",
     "\n",
-    "In other words, this is saying that treatment is zero when $R$ is below a threshold $c$ and one otherwise. This means that we get to observe $Y_1$ when $R>c$ and $Y_0$ when $R<c$. To wrap our head around this, think about the potential outcomes as 2 functions that we can't observe entirely. Both $Y_0(R)$ and $Y_1(R)$ are there, we just can't see that. The threshold acts as a switch that allows us to see one or the other of those function, but never both, much like in the image below:\n",
+    "<mark>In other words, this is saying that treatment is zero when $R$ is below a threshold $c$ and one otherwise.</mark> This means that we get to observe $Y_1$ when $R>c$ and $Y_0$ when $R<c$. To wrap our head around this, think about the potential outcomes as 2 functions that we can't observe entirely. Both $Y_0(R)$ and $Y_1(R)$ are there, we just can't see that. The threshold acts as a switch that allows us to see one or the other of those function, but never both, much like in the image below:\n",
     "\n",
     "![img](./data/img/rdd/rdd.png)\n",
     "\n",
@@ -36,7 +36,7 @@
     "\n",
     "One way to look at this question is from a [mortality rate perspective (Carpenter and Dobkin, 2009)](https://www.aeaweb.org/articles?id=10.1257/app.1.1.164). From the public policy standpoint, one could argue that we should lower the mortality rate as much as possible. If alcohol consumption increases the mortality rate by a lot, we should avoid lowering the minimum drinking age. This would be consistent with the objective of lowering deaths caused by alcohol consumption.\n",
     "\n",
-    "To estimate the impacts of alcohol on death, we could use the fact that legal drinking age imposes a discontinuity on nature. In the US, those just under 21 years don't drink (or drink much less) while those just older than 21 do drink. This means that the probability of drinking jumps at 21 years and that is something we can explore with an RDD."
+    "<mark>To estimate the impacts of alcohol on death, we could use the fact that legal drinking age imposes a discontinuity on nature.</mark> In the US, those just under 21 years don't drink (or drink much less) while those just older than 21 do drink. This means that the probability of drinking jumps at 21 years and that is something we can explore with an RDD."
    ]
   },
   {
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model is telling us that mortality increases by 7.6627 points with the consumption of alcohol. Another way of putting this is that alcohol increases the chance of death by all causes by 8% (100*((7.6627+93.6184)/93.6184 - 1)). Notice that this also gives us standard errors for our causal effect estimate. In this case, the effect is statistically significant, since the p-value is below 0.01.\n",
+    "<mark>This model is telling us that mortality increases by 7.6627 points with the consumption of alcohol.</mark> Another way of putting this is that alcohol increases the chance of death by all causes by 8% (100*((7.6627+93.6184)/93.6184 - 1)). Notice that this also gives us standard errors for our causal effect estimate. In this case, the effect is statistically significant, since the p-value is below 0.01.\n",
     "\n",
     "If we want to verify this model visually, we can show the predicted values on the data that we have. You can see that it is as though we had 2 regression models: one for those above the threshold and one for below it."
    ]
@@ -382,7 +382,7 @@
     "\n",
     "Regression Discontinuity relies heavily on the extrapolations properties of linear regression. Since we are looking at the values at the beginning and end of 2 regression lines, we better get those limits right. What can happen is that regression might focus too much on fitting the other data points at the cost of a poor fit at the threshold. If this happens, we might get the wrong measure of the treatment effect.\n",
     "\n",
-    "One way to solve this is to give higher weights for the points that are closer to the threshold. There are many ways to do this, but a popular one is to reweight the samples with the **triangular kernel**\n",
+    "<mark>One way to solve this is to give higher weights for the points that are closer to the threshold.</mark> There are many ways to do this, but a popular one is to reweight the samples with the **triangular kernel**\n",
     "\n",
     "$\n",
     "K(R, c, h) = \\mathcal{1}\\{|R-c| \\leq h\\} * \\bigg(1-\\frac{|R-c|}{h}\\bigg)\n",
@@ -949,9 +949,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
